# Notification-Forwarder

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/notification_forwarder/: MainActivity.kt
android/app/src/main/kotlin/com/example/notification_forwarder/api/: ApiClient.kt
android/app/src/main/kotlin/com/example/notification_forwarder/apps/: InstalledAppsProvider.kt
android/app/src/main/kotlin/com/example/notification_forwarder/channel/: NotificationStreamHandler.kt
android/app/src/main/kotlin/com/example/notification_forwarder/listener/: NotificationListener.kt
android/app/src/main/kotlin/com/example/notification_forwarder/model/: NotificationData.kt
android/app/src/main/kotlin/com/example/notification_forwarder/permission/: PermissionHelper.kt
android/app/src/main/kotlin/com/example/notification_forwarder/storage/: SettingsManager.kt
android/app/src/main/kotlin/com/example/notification_forwarder/utils/: AppNameResolver.kt  Constants.kt  SelectedAppsManager.kt
lib/: main.dart
lib/models/: app_info.dart  payment_notification.dart
lib/screens/: app_selection_screen.dart  home_screen.dart  settings_screen.dart
lib/services/: api_service.dart  app_selection_service.dart  apps_service.dart  native_settings_service.dart  notification_service.dart  permission_services.dart
notification-forwarder-backend/: main.py  pyproject.toml
test/: widget_test.dart
